# eclipse-opensovd_classic-diagnostic-adapter

./: Cargo.toml  README.md  clippy.toml  opensovd-cda.toml
.github/workflows/: build.yml  nightly.yml  pr-checks.yml  pr-label-review-state.yml  pre-commit.yaml
cda-comm-doip/: Cargo.toml
cda-comm-doip/src/: config.rs  lib.rs
cda-comm-uds/src/: lib.rs
cda-core/src/diag_kernel/: ecumanager.rs  mod.rs  operations.rs  param_metadata.rs  payload.rs  schema.rs
cda-database/: Cargo.toml
cda-database/src/: lib.rs
cda-database/src/datatypes/: comparam.rs  database_builder.rs  diag_coded_type.rs  mod.rs
cda-database/src/mdd_data/: mod.rs
cda-extra/src/: systemd_notify.rs
cda-health/src/: config.rs
cda-interfaces/src/: ecumanager.rs  lib.rs  strings.rs  util.rs
cda-interfaces/src/datatypes/: com_params.rs  component.rs  database_naming_convention.rs  faults.rs  flatbuf_config.rs  sdg.rs
cda-main/: Cargo.toml
cda-main/src/: lib.rs  main.rs
cda-main/src/config/: configfile.rs  generate.rs  mod.rs
cda-sovd-interfaces/src/: error.rs  locking.rs
cda-sovd-interfaces/src/components/ecu/: modes.rs
cda-sovd/src/sovd/components/ecu/: faults.rs
cda-tracing/: Cargo.toml
cda-tracing/src/: lib.rs  otel.rs
comm-mbedtls/mbedtls-rs/src/: async_stream.rs  ed25519.rs  lib.rs  x509.rs
comm-mbedtls/mbedtls-rs/src/ssl/: config.rs  context.rs  mod.rs
comm-mbedtls/mbedtls-sys/: build.rs
comm-mbedtls/mbedtls-sys/csrc/: ed25519_extract.h  ed25519_psa_driver.c
docs/01_about/: 01_introduction.rst  04_traceability.rst
docs/02_requirements/: 01_general.rst  02_sovd.rst  03_diagnostic_tester.rst  04_communication.rst
docs/03_architecture/: 01_general.rst
docs/03_architecture/02_sovd-api/: 02_sovd-api.rst
docs/03_architecture/02_sovd-api/openapi/: ecu_resource_collection.yaml
docs/03_architecture/03_communication/: 02_uds_communication.rst
docs/04_adr/: 01_mimalloc.rst  03_mmap_strategy.rst
integration-tests/: Cargo.toml
integration-tests/tests/sovd/: custom_routes.rs  data.rs  flash_download.rs  locks.rs  mod.rs
integration-tests/tests/util/: runtime.rs
testcontainer/odx/: generate_docker.sh  helper.py  routines.py  security_access.py  shared_units.py
